Added design Logic in scss file

--- a/src/webparts/helloWorld/components/HelloWorld.module.scss
+++ b/src/webparts/helloWorld/components/HelloWorld.module.scss
@@ -11,43 +11,77 @@
   }
 }
 
-.welcome {
-  text-align: center;
-}
-
-.welcomeImage {
-  width: 100%;
-  max-width: 420px;
-}
-
 .chatContainer {
   display: flex;
   flex-direction: column;
+  width: 100%;
+  height: 100%;
+  background-color: #ffffff; // white background
+  border: 1px solid #ededed; // subtle border
+  border-radius: 8px;
+  overflow: hidden;
+}
+
+.chatHeader {
+  display: flex;
   align-items: center;
+  background-color: #91c717; // primary green
+  color: #ffffff; // white text
   padding: 1rem;
+  font-weight: 600;
+  font-size: 1.25rem;
+}
+
+.chatAvatar {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #ffffff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 24px;
+  margin-right: 10px;
+
+  img {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    object-fit: cover;
+  }
+}
+
+.chatTitle {
+  flex-grow: 1;
 }
 
 .webChat {
+  flex-grow: 1;
   width: 100%;
-  min-height: 50vh;
+  height: 500px; // or remove this and rely on parent
+  overflow-y: auto;
+  padding: 1rem;
+  box-sizing: border-box;
+  background-color: #f8f8f8;
 }
 
 .loadingSpinner {
   padding-top: 1rem;
   padding-bottom: 1rem;
+  background-color: #ffffff;
+  text-align: center;
 }
-
 
 .links {
   a {
     text-decoration: none;
     color: "[theme:link, default:#03787c]";
-    color: var(--link); // note: CSS Custom Properties support is limited to modern browsers only
+    color: var(--link);
 
     &:hover {
       text-decoration: underline;
       color: "[theme:linkHovered, default: #014446]";
-      color: var(--linkHovered); // note: CSS Custom Properties support is limited to modern browsers only
+      color: var(--linkHovered);
     }
   }
 }
